fix(audit): preserve null snapshot values in diffs